<resources>
    <string name="app_name" translatable="false">Advanced Editor</string>

    <string name="default_edit_text_data">Default Value</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_drawer_layout">DrawerLayoutActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">Nbow Developer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="setting">Settings</string>
    <string name="storage_manager">Storage Manager</string>
    <string name="history">History</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="appereance">Appereance</string>

    <string name="unsaved_dialog_message">Do you want to save your changes?</string>

    <string name="empersand" translatable="false"><html>&amp;</html></string>
    <string name="lessthan" translatable="false"><html>&lt;</html></string>
    <string name="greaterthan" translatable="false"><html>&gt;</html></string>
    <!--    <string name="doublequote"></string>-->
    <!--    <string name="singlequote">a</string>-->
    <string name="attherat" translatable="false">a</string>
    <string name="dollar" translatable="false">$</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="line_number">Line Number</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="ignore_case">Ignore Case</string>
    <string name="tab" translatable="false">tab</string>
    <string name="replace_all">Replace All</string>
    <string name="replace">Replace</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="paste">Paste</string>
    <string name="copy">Copy</string>
    <string name="select_all">Select All</string>
    <string name="goto_line">Goto Line</string>
    <string name="toolbox">Toolbox</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="find_amp_replace"><![CDATA[Find & Replace]]></string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="edit">Edit</string>
    <string name="menu">menu</string>
    <string name="new_file">New</string>
    <string name="save_as">Save As</string>
    <string name="share">Share</string>
    <string name="no_change_found">No Changes Found</string>
    <string name="search_not_found">search not found</string>
    <string name="unsaved_file">Unsaved File</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="greet_line">Hello!</string>
    <string name="file_doesnot_saved">File Doesn\'t Saved</string>
    <string name="file_havenot_permission_to_write">Doesn\'t have valid permission to write</string>
    <string name="search_and_replace">Search and Replace</string>
    <string name="find">Find</string>
    <string name="enter_linenumber_btwn">Enter line number between</string>
    <string name="clear_history">Clear History</string>
    <string name="feedback">FeedBack</string>
    <string name="reload_file">"Reload "</string>
    <string name="title_activity_web_view">WebView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Preference Titles -->
</resources>